--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.3",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
@@ -9,5 +10,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "devDependencies": {
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6"
   }
 }
