--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^1.35.3",
-    "next": "^12.1.6",
+    "he": "^1.2.0",
+    "next": "^15.3.3",
+    "node-html-parser": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
